[package]
name = "codetabs"
version = "0.1.0"
authors = ["lightning1141 <lightning1141@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.2.0", features = ["attributes"] }
surf = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
